# NeneCppGameTemplate

./: AGENTS.md  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: AGENTS.md  CMakeLists.txt  README.md
{{cookiecutter.project_slug}}/NeneEngine/: CMakeLists.txt
{{cookiecutter.project_slug}}/appendix/: NOTICE.md  README.md
{{cookiecutter.project_slug}}/notebook/: commands.md  gametree.txt  plan.md  todo.txt
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  game.cpp  main.cpp
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt
